--- a/photoalbum/application/configs/application.ini
+++ b/photoalbum/application/configs/application.ini
@@ -12,9 +12,9 @@ resources.view[] =
 
 resources.db.adapter = PDO_MYSQL
 resources.db.params.host = localhost
-resources.db.params.username = root
-resources.db.params.password = 
-resources.db.params.dbname = zend
+resources.db.params.username = tddd26
+resources.db.params.password = 123123
+resources.db.params.dbname = tddd26
 
 [staging : production]
 [testing : production]
