--- a/photoalbum/public/.htaccess
+++ b/photoalbum/public/.htaccess
@@ -1,5 +1,6 @@
 
 RewriteEngine On
+RewriteBase /~dentarg/tddd26/photoalbum/public/
 RewriteCond %{REQUEST_FILENAME} -s [OR]
 RewriteCond %{REQUEST_FILENAME} -l [OR]
 RewriteCond %{REQUEST_FILENAME} -d
